# Playground_Run

./: CMakeLists.txt  README.md
include/: common.h  death_menu.h  game.h  main.h  obstacle.h  start_menu.h  stop_menu.h
include/utils/: audio.h  character_motion.h  init_game.h  motion.h  print_text.h  score.h  time.h
src/: CMakeLists.txt  death_menu.c  game.c  main.c  obstacle.c  start_menu.c  stop_menu.c
src/utils/: audio.c  character_motion.c  init_game.c  motion.c  print_text.c  score.c  time.c
